--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    
   </head>
 
-  <body class="font-sans flex flex-col items-center p-2">
+  <body class="font-sans flex flex-col items-center p-2 w-auto h-auto">
     <main class="px-8 py-12 mx-auto flex flex-col items-center justify-center">
       <div class="w-16 md:w-24 lg:w-16">
           <img class="object-contain" src="/images/logo.svg" alt="page logo" />
